--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
       -->
 
      <link rel="stylesheet" href="index.css">
-     <script src="base-de.preguntas.js"></script>
+     <script src="3base-de.preguntas.js"></script>
      <script defer="" src="index.js"></script>
 
      <meta property="og:site_name" content="Juego de preguntas">
